# Camomile

.github/workflows/: main.yml
compat/: camomileLibrary.mli
src/: camomile.ml  config.ml  dune  functor.ml
src/charmaps/: dune_gen.ml
src/charmaps/sources/: EBCDIC-PT
src/internal/: database.mli  tbl31.ml
src/mappings/: gen_mappings.ml
src/public/: caseMap.mli  charEncoding.ml  charEncoding.mli  locale.mli  oOChannel.ml  oOChannel.mli  subText.ml  subText.mli  uCS4.mli  uChar.ml  uChar.mli  uCharInfo.mli  uCharTbl.ml  uCharTbl.mli  uCol.ml  uCol.mli  uLine.ml  uLine.mli  uMap.mli  uNF.ml  uNF.mli  uRe.mli  uReStr.ml  uReStr.mli  uSet.ml  uSet.mli  uTF16.mli  uTF8.mli  uText.mli  unicodeString.ml  xString.ml  xString.mli
src/tools/: camomilecharmap.ml  camomilelocaledef_lexer.ml
test/lib/: blender.ml  blender.mli
test/tester/: test_base.ml  test_normalform.ml  test_uCol.ml
