(env
 (dev
  (flags
   (:standard -w -3))))

(generate_sites_module
 (module sites)
 (sites camomile))

(include_subdirs unqualified)

(rule
 (target configImpl.ml)
 (action
  (copy configImpl.%{env:CAMOMILE_CONFIG=dune}.ml %{target})))

(rule
 (target configImpl.env.ml)
 (action
  (write-file
   %{target}
   "\nlet prefix = \"%{env:CAMOMILE_PREFIX=/usr}/share/camomile\"\nlet datadir = Filename.concat prefix \"database\"\nlet localedir = Filename.concat prefix \"locales\"\nlet charmapdir = Filename.concat prefix \"charmaps\"\nlet unimapdir = Filename.concat prefix \"mappings\"\n")))

(library
 (name camomileLib)
 (public_name camomile.lib)
 (libraries bigarray camlp-streams)
 (modules :standard \ camomile configImpl sites))

(library
 (name camomile)
 (public_name camomile)
 (libraries camomileLib dune-site)
 (modules camomile configImpl sites))
